--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
                     scene.add( mesh );
                 }
             }
-      
+
+            // 创建纹理
+            // const url = ""
+            // const envTexture = new THREE.TextureLoader().load(url);
+            // scene.
             //  位置
             // mesh.position.set(0, 0, 0)
             //  旋转
